--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Mom\'s Kitchen</string>
+    <string name="Enter_Your_Email_Address">Enter Your Email Address</string>
     <string name="user_name">Name</string>
     <string name="user_phone_number">Phone Number</string>
     <string name="user_name_details"></string>
@@ -69,5 +70,6 @@
         libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
         vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
     </string>
+    <string name="enter_your_email_address">Enter Your Email Address</string>
 
 </resources>
