--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-<h1 align="center">🍽️ Mom's Kitchen</h1>
+<h1>🍽️ Mom's Kitchen</h1>
 
-<p align="center">
+<p >
   <b>Mom's Kitchen</b> is an Android-based food ordering application built as if a restaurant created its own delivery system.
   The app focuses on simplicity, smooth navigation, and real-world ordering flow.
 </p>
